# phrasa

./: .gitignore  .gitmodules  CODING_CONVENTIONS.md  LICENSE  LICENSE.md  README.md
docs/: What is Phrasa.md
src/grammar/: Notes.g4  generate.ps1
src/interpreter/: index.js  package.json  tsconfig.json
src/interpreter/facade/: ParserFacade.ts
src/interpreter/grammar/: Phrasa.g4
src/interpreter/src/: Evaluator.ts  IInterpreter.ts  ISequenceBuilder.ts  ITreeBuilder.ts  Interpreter.ts  NotesInterpreter.ts  PhrasaError.ts  PhrasaExpression.ts  PieceTree.ts  Sequence.ts  SequenceBuilder.ts  TextContent.ts  TreeBuilder.ts
src/interpreter/src/ExpressionTreeBuilder/: AntlrPhrasaExpressionTreeBuilder.ts  PhrasaExpressionTreeBuilder.ts
src/interpreter/src/TreeBuilder/: ITreeBuilder.ts  PhraseFileParser.ts  TreeBuilder.ts  parsers.ts  symbols.ts
src/interpreter/src/generated-parser/: Phrasa.interp  Phrasa.tokens  PhrasaLexer.d.ts  PhrasaLexer.interp  PhrasaLexer.js  PhrasaLexer.tokens  PhrasaListener.d.ts  PhrasaListener.js  PhrasaParser.d.ts  PhrasaParser.js
src/interpreter/test/: ParserFacade.ts  tsconfig.json
src/interpreter/tests/: cooltest.test.mjs  interpreter.test.mjs  jasmine.json  lexer_parser.test.mjs  sequence_builder.test.mjs  tree_builder.test.mjs
src/interpreter/tests/expression_tree_builder/: expr_tree_builder.test.mjs
src/interpreter/tests/files/: additional-word-error  bpm-error  inner_expr  inner_expr2  interpreter_test  interpreter_test.piece  interpreter_test_file_2  simple.piece  unknown-prop-error
src/interpreter/tests/sequence_builder/: sequence_builder.test.mjs
src/interpreter/tests/tree_builder/: each_test  general_test  multifile1  multifile2  offset_test  pitch_test  selector_test  sequence_test  templates_test  tree_builder.test.mjs
src/player/: .gitignore  CMakeLists.txt
src/player/ShiftPlayer/: .gitignore  CMakeLists.txt  ShiftPlayer.jucer
src/player/ShiftPlayer/Source/: Communication.cpp  Communication.h  JuceMain.cpp  ShiftPlayerApp.cpp  ShiftPlayerApp.h  SineSynth.h  testgtest.cpp
src/player/ShiftPlayer/Source/Communication/impl/: TcpConnection.h
src/player/ShiftPlayer/Source/audio/: AudioBuffer.h  CMakeLists.txt
src/player/ShiftPlayer/Source/connection/: CMakeLists.txt  IConnection.h
src/player/ShiftPlayer/Source/connection/impl/: TcpConnection.cpp
src/player/ShiftPlayer/Source/connection/tests/: ConnectionTest.cpp
src/player/ShiftPlayer/Source/event/: ShiftTime.h
src/player/ShiftPlayer/Source/instrument/: CMakeLists.txt  IInstrument.h  IInstrumentFactory.h  SequenceTrack.h
src/player/ShiftPlayer/Source/instrument/impl/: InstrumentFactory.cpp  SequenceProcessor.h  SineSynth.h
src/player/ShiftPlayer/Source/instrument/tests/: SequenceProcessorTests.cpp
src/player/ShiftPlayer/Source/player/: CMakeLists.txt  Event.h  IEventValue.h  IPlayer.h  IPlayerAudioProcessor.h  ShiftTime.h
src/player/ShiftPlayer/Source/player/impl/: Player.cpp  Player.h
src/player/ShiftPlayer/Source/player_controller/: CMakeLists.txt  IPlayerController.h
src/player/ShiftPlayer/Source/player_controller/impl/: PlayerController.cpp  PlayerController.h
src/player/Source/: JuceMain.cpp  PhrasaPlayerApp.cpp  PhrasaPlayerApp.h  ShiftPlayerApp.cpp  ShiftPlayerApp.h
src/player/Source/audio/: AudioBuffer.h  AudioBufferOperations.h  CMakeLists.txt
src/player/Source/connection/: IConnection.h
src/player/Source/connection/impl/: TcpConnection.cpp  TcpConnection.h
src/player/Source/connection/tests/: ConnectionTest.cpp
src/player/Source/event/: CMakeLists.txt  Event.h  IEventValue.h  Sequence.h  ShiftTime.h
src/player/Source/instrument/: CMakeLists.txt  IInstrument.h  IInstrumentFactory.h  SequenceTrack.h
src/player/Source/instrument/impl/: InstrumentFactory.cpp  InstrumentFactory.h  MPEEventPerChannelHolder.h  SamplerInstrument.h  SequenceProcessor.h  SineSynth.h  SurgeInstrument.h
src/player/Source/instrument/tests/: InstrumentTests.cpp  SequenceProcessorTests.cpp
src/player/Source/player/: CMakeLists.txt  IPlayer.h  IPlayerAudioProcessor.h
src/player/Source/player/impl/: AudioBufferOperations.h  ManagedAudioBuffer.h  Player.cpp  Player.h  UniquePtrLockFreeQueue.h
src/player/Source/player_controller/: CMakeLists.txt  IPlayerController.h
src/player/Source/player_controller/impl/: PlayerController.cpp  PlayerController.h
src/player/Source/utils/: CMakeLists.txt  ProducerConsumerQueue.h
src/protocol/: README.md  generate.ps1  note_message.proto  package.json
src/test/: ParserFacade.js  ParserFacade.js.map  ParserFacade.ts  mocha.opts  package.json
src/test/test/: cooltest.js
